# Zobrollo

./: '  CMakeLists.txt  Makefile  README.md  config.c  config.cfg  config.h  drawtrack.c  drawtrack.h  example  file_paths.h  kart.c  kart.h  main.c  menu.c  misc.c  misc.h  race.c  race.h  record.c  record.h  showtrack.c  zobrollo
src/: config.c  config.h  connect_server.c  connect_server.h  display.c  display.h  drawframe.c  drawframe.h  drawtrack.c  drawtrack.h  file_paths.h  ghost.c  ghost.h  global.h  gui.c  gui.h  input_boxes.cpp  input_boxes.h  join_server.cpp  join_server.h  kart.c  kart.h  main.c  menu.cpp  misc.c  misc.h  networking.c  networking.h  no_agui_menu.c  no_agui_menu.h  race.c  race.h  record.c  record.h  start_server.cpp  start_server.h
tracks/: Long Straight  triangle
